[tool.poetry]
name = "teacup"
version = "0.1.0"
description = ""
authors = ["Ari Gesher <ari@gesher.net>"]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "*"
socketio = "*"
pyyaml = '*'

[tool.poetry.dev-dependencies]
pytest = "*"
black = "*"
jupyter = "*"
notebook = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
